# Disaster_Management

./: CMakeLists.txt  README.md  main.cpp
database/: disaster.db
include/: CommunicationManager.h  DatabaseManager.h  DisasterScenario.h  ResourceInventory.h
src/: CommunicationManager.cpp  DatabaseManager.cpp  DisasterScenario.cpp  ResourceInventory.cpp
